[package]
name = "see"
version = "0.0.0-alpha.0"
authors = ["wyhaya <wyhaya@gmail.com>"]
edition = "2018"

[dependencies]
percent-encoding = "1.0.1"
yaml-rust = "0.4"
base64 = "0.10.1"
libflate = "0.1.21"
chrono = "0.4.6"
runtime = "0.3.0-alpha.1"
runtime-raw = "0.3.0-alpha.1"
runtime-native = "0.3.0-alpha.1"
futures-preview = "0.3.0-alpha.13"